# librefang

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.rust-dev  GOVERNANCE.md  IMAGEFILE_MIME_ANALYSIS.md  README.md  SECURITY.md  flake.nix  justfile  librefang.toml.example  mise.toml  openapi.json  render.yaml  rust-toolchain.toml
crates/librefang-acp/: Cargo.toml
crates/librefang-acp/src/: permission.rs
crates/librefang-acp/tests/: acp_integration.rs
crates/librefang-api/: Cargo.toml
crates/librefang-api/dashboard/: AGENTS.md  package.json  pnpm-lock.yaml  vite.config.ts
crates/librefang-api/src/: acp_uds.rs  approval.rs  channel_bridge.rs  client_ip.rs  error.rs  extractors.rs  lib.rs  login_page.html  middleware.rs  oauth.rs  openai_compat.rs  openapi.rs  password_hash.rs  rate_limiter.rs  routes.rs  secrets_env.rs  server.rs  telemetry.rs  terminal.rs  terminal_tmux.rs  types.rs  validation.rs  webchat.rs  webhook_store.rs  workflow.rs  ws.rs
crates/librefang-api/tests/: a2a_routes_integration.rs  agent_channels_routes_test.rs  agent_identity_registry_test.rs  agent_kv_authz_integration.rs  agents_capabilities_files_integration.rs  agents_routes_integration.rs  api_integration_test.rs  approvals_routes_integration.rs  async_task_tracker_runtime_test.rs  audit_routes_integration.rs  auth_public_allowlist.rs  authz_routes_integration.rs  auto_dream_routes_integration.rs  budget_routes_test.rs  channel_send_mirror_test.rs  channel_webhooks_test.rs  channels_routes_test.rs  config_routes_integration.rs  config_schema_golden.rs  config_schema_overlay.rs  config_status_session_count_test.rs  daemon_lifecycle_test.rs  dashboard_snapshot_cache_test.rs  dead_route_audit_test.rs  declarative_triggers_test.rs  error_envelope_request_id_test.rs  goals_routes_integration.rs  hands_routes_integration.rs  hooks_commands_routes_integration.rs  idempotency_test.rs  inbox_routes_integration.rs  load_test.rs  mcp_auth_routes_extra_test.rs  mcp_oauth_flow_test.rs  mcp_tools_list_allowlist_test.rs  media_routes_integration.rs  memory_routes_integration.rs  network_routes_integration.rs  openai_compat_routes_integration.rs  openapi_path_coverage_test.rs  (+23 more)
crates/librefang-channels/: AGENTS.md  Cargo.toml  README.md
crates/librefang-channels/benches/: dispatch.rs
crates/librefang-channels/src/: attachment_enrich.rs  bluesky.rs  bridge.rs  channels-allowlist.txt  dingtalk.rs  discord.rs  discourse.rs  email.rs  embedded_sdk.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  guilded.rs  http_client.rs  irc.rs  keybase.rs  lib.rs  line.rs  mastodon.rs  matrix.rs  mattermost.rs  message_journal.rs  message_truncator.rs  messenger.rs  mqtt.rs  mumble.rs  nextcloud.rs  nostr.rs  ntfy.rs  pumble.rs  rate_limiter.rs  reddit.rs  revolt.rs  rocketchat.rs  roster.rs  router.rs  sanitizer.rs  sidecar.rs  (+14 more)
crates/librefang-channels/tests/: bridge_integration_test.rs
crates/librefang-cli/: Cargo.toml  build.rs
crates/librefang-cli/src/: bundled_agents.rs  desktop_install.rs  doctor.rs  launcher.rs  log_filter.rs  main.rs  mcp.rs  progress.rs  templates.rs
crates/librefang-cli/templates/: init_default_config.toml  init_wizard_config.toml
crates/librefang-cli/tests/: build_rs_no_git_mutation.rs  vault_rotate_key.rs
crates/librefang-desktop/: Cargo.toml  MOBILE.md  tauri.android.conf.json  tauri.conf.json  tauri.desktop.conf.json  tauri.ios.conf.json
crates/librefang-desktop/capabilities/: default.json  mobile.json
crates/librefang-desktop/src/: commands.rs  connection.rs  lib.rs  main.rs  server.rs  shortcuts.rs  tray.rs  updater.rs
crates/librefang-extensions/: AGENTS.md  Cargo.toml
crates/librefang-extensions/src/: credentials.rs  dotenv.rs  http_client.rs  installer.rs  lib.rs  oauth.rs  vault.rs
crates/librefang-extensions/tests/: vault_roundtrip.rs
crates/librefang-hands/: Cargo.toml
crates/librefang-hands/src/: bundled.rs  lib.rs  registry.rs
crates/librefang-http/: Cargo.toml
crates/librefang-http/src/: lib.rs
crates/librefang-import/: Cargo.toml
crates/librefang-import/src/: lib.rs  report.rs
crates/librefang-import/tests/: idempotency.rs
crates/librefang-kernel/: Cargo.toml
crates/librefang-kernel-handle/: Cargo.toml
crates/librefang-kernel-handle/src/: a2a_registry.rs  acp_fs.rs  acp_terminal.rs  agent_control.rs  api_auth.rs  approval_gate.rs  catalog_query.rs  channel_sender.rs  cron_control.rs  event_bus.rs  goal_control.rs  hands_control.rs  knowledge_graph.rs  lib.rs  memory_access.rs  prompt_store.rs  session_writer.rs  task_queue.rs  tests.rs  tool_policy.rs  wiki_access.rs  workflow_runner.rs
crates/librefang-kernel-metering/: Cargo.toml
crates/librefang-kernel-router/: Cargo.toml
crates/librefang-llm-driver/: Cargo.toml
crates/librefang-llm-drivers/: Cargo.toml
crates/librefang-memory/: Cargo.toml
crates/librefang-migrate/: Cargo.toml
crates/librefang-rl-export/: Cargo.toml
crates/librefang-runtime/: Cargo.toml
crates/librefang-runtime-audit/: Cargo.toml
crates/librefang-runtime-mcp/: Cargo.toml
crates/librefang-runtime-media/: Cargo.toml
crates/librefang-runtime-oauth/: Cargo.toml
crates/librefang-runtime-sandbox-docker/: Cargo.toml
crates/librefang-runtime-wasm/: Cargo.toml
crates/librefang-testing/: Cargo.toml
crates/librefang-types/: Cargo.toml
crates/librefang-wire/: Cargo.toml
xtask/: Cargo.toml  README.md
xtask/baselines/: config.sha256  openapi.sha256
xtask/src/: api_docs.rs  bench.rs  build_web.rs  changelog.rs  check_changed.rs  check_links.rs  ci.rs  clean_all.rs  codegen.rs  common.rs  contributors.rs  coverage.rs  db.rs  deps.rs  dev.rs  dist.rs  docker.rs  doctor.rs  fmt.rs  integration_test.rs  license_check.rs  loc.rs  main.rs  migrate.rs  pre_commit.rs  publish_npm_binaries.rs  publish_pypi_binaries.rs  publish_sdks.rs  release.rs  setup.rs  sync_versions.rs  update_deps.rs  validate_config.rs
(+1203 files in other folders)
