[workspace]
resolver = "2"
members = [
    "crates/librefang-types",
    "crates/librefang-memory",
    "crates/librefang-runtime",
    "crates/librefang-wire",
    "crates/librefang-api",
    "crates/librefang-kernel",
    "crates/librefang-cli",
    "crates/librefang-channels",
    "crates/librefang-migrate",
    "crates/librefang-skills",
    "crates/librefang-desktop",
    "crates/librefang-hands",
    "crates/librefang-extensions",
    "xtask",
]

[workspace.package]
version = "0.6.6-20260320"
edition = "2021"
license = "MIT"
repository = "https://github.com/librefang/librefang"
homepage = "https://librefang.ai"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
rmp-serde = "1"

# Error handling
thiserror = "2.0"
anyhow = "1"

# Concurrency
dashmap = "6"
crossbeam = "0.8"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# IDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Database
rusqlite = { version = "0.39.0", features = ["bundled", "serde_json"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# HTTP client (for LLM drivers)
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "multipart", "rustls", "gzip", "deflate", "brotli", "form", "query"] }

# TLS fallback — bundled Mozilla CA roots for systems without system certs (musl, Termux, minimal containers)
rustls = "0.23"
webpki-roots = "1"
rustls-native-certs = "0.8"

# Async trait
async-trait = "0.1"

# Base64
base64 = "0.22"

# Bytes
bytes = "1"

# Futures
futures = "0.3"

# WebSocket client (for Discord/Slack gateway)
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = "2"

# WASM sandbox
wasmtime = "42"

# HTTP server (for API daemon)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "compression-br", "limit"] }

# Home directory resolution
dirs = "6"

# YAML parsing
serde_yaml = "0.9"

# JSON5 parsing
json5 = "1.3.1"

# Directory walking
walkdir = "2"

# Security
sha2 = { version = "0.10", features = ["oid"] }
sha1 = "0.10"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
hex = "0.4"
k256 = { version = "0.13", features = ["schnorr"] }
subtle = "2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rsa = "0.9"
rand = "0.9"
zeroize = { version = "1", features = ["derive"] }

# JWT validation
jsonwebtoken = "10"

# Rate limiting
governor = "0.10.4"

# Interactive CLI
ratatui = "0.30"
colored = "3"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"

# HTML entity decoding
html-escape = "0.2"

# Lightweight regex
regex-lite = "0.1"

# Socket options (SO_REUSEADDR)
socket2 = "0.6.3"

# Zip archive extraction
zip = { version = "8", default-features = false, features = ["deflate"] }

# Email (SMTP + IMAP)
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
imap = { version = "2", default-features = false }
rustls-connector = "0.22"
mailparse = "0.16"

# Internationalization (i18n)
fluent = "0.17"
unic-langid = "0.9"

# MQTT client
rumqttc = "0.25"

# Testing
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

# Performance
smallvec = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
