[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Build automation for the LibreFang workspace"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
toml_edit = "0.25"
regex = "1"
chrono = "0.4"
base64 = { workspace = true }
sha2 = { workspace = true }
librefang-migrate = { path = "../crates/librefang-migrate" }
