[package]
name = "librefang-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Bridge Layer — pluggable messaging integrations for LibreFang"

[features]
default = [
    "channel-telegram",
    "channel-discord",
    "channel-slack",
    "channel-matrix",
    "channel-email",
    "channel-webhook",
    "channel-whatsapp",
    "channel-signal",
    "channel-teams",
    "channel-mattermost",
    "channel-irc",
    "channel-google-chat",
    "channel-twitch",
    "channel-rocketchat",
    "channel-zulip",
    "channel-xmpp",
    "channel-bluesky",
    "channel-feishu",
    "channel-line",
    "channel-mastodon",
    "channel-messenger",
    "channel-reddit",
    "channel-revolt",
    "channel-viber",
    "channel-flock",
    "channel-guilded",
    "channel-keybase",
    "channel-nextcloud",
    "channel-nostr",
    "channel-pumble",
    "channel-threema",
    "channel-twist",
    "channel-webex",
    "channel-dingtalk",
    "channel-discourse",
    "channel-gitter",
    "channel-gotify",
    "channel-linkedin",
    "channel-mumble",
    "channel-ntfy",
    "channel-qq",
    "channel-wechat",
    "channel-wecom",
]

all-channels = [
    "channel-telegram",
    "channel-discord",
    "channel-slack",
    "channel-matrix",
    "channel-email",
    "channel-webhook",
    "channel-whatsapp",
    "channel-signal",
    "channel-teams",
    "channel-mattermost",
    "channel-irc",
    "channel-google-chat",
    "channel-twitch",
    "channel-rocketchat",
    "channel-zulip",
    "channel-xmpp",
    "channel-bluesky",
    "channel-feishu",
    "channel-line",
    "channel-mastodon",
    "channel-messenger",
    "channel-reddit",
    "channel-revolt",
    "channel-viber",
    "channel-flock",
    "channel-guilded",
    "channel-keybase",
    "channel-nextcloud",
    "channel-nostr",
    "channel-pumble",
    "channel-threema",
    "channel-twist",
    "channel-webex",
    "channel-dingtalk",
    "channel-discourse",
    "channel-gitter",
    "channel-gotify",
    "channel-linkedin",
    "channel-mumble",
    "channel-ntfy",
    "channel-qq",
    "channel-wechat",
    "channel-wecom",
    "channel-mqtt",
]

# Individual channel features
channel-telegram = []
channel-discord = []
channel-slack = []
channel-matrix = []
channel-email = ["dep:lettre", "dep:imap", "dep:rustls-connector", "dep:mailparse"]
channel-webhook = []
channel-whatsapp = []
channel-signal = []
channel-teams = []
channel-mattermost = []
channel-irc = []
channel-google-chat = ["dep:rsa"]
channel-twitch = []
channel-rocketchat = []
channel-zulip = []
channel-xmpp = []
channel-bluesky = []
channel-feishu = ["dep:aes", "dep:cbc"]
channel-line = []
channel-mastodon = []
channel-messenger = []
channel-reddit = []
channel-revolt = []
channel-viber = []
channel-flock = []
channel-guilded = []
channel-keybase = []
channel-nextcloud = []
channel-nostr = ["dep:k256"]
channel-pumble = []
channel-threema = []
channel-twist = []
channel-webex = []
channel-dingtalk = []
channel-discourse = []
channel-gitter = []
channel-gotify = []
channel-linkedin = []
channel-mumble = []
channel-ntfy = []
channel-qq = []
channel-wechat = []
channel-wecom = ["dep:roxmltree", "dep:aes", "dep:cbc"]
channel-mqtt = ["dep:rumqttc"]

[dependencies]
librefang-types = { path = "../librefang-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
html-escape = { workspace = true }
regex = { workspace = true }
regex-lite = { workspace = true }
smallvec = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }

# Channel-specific optional dependencies
rsa = { workspace = true, optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
rustls = { workspace = true, features = ["ring"] }
roxmltree = { version = "0.21", optional = true }
k256 = { workspace = true, optional = true }

rumqttc = { workspace = true, optional = true }
lettre = { workspace = true, optional = true }
imap = { workspace = true, optional = true }
rustls-connector = { workspace = true, optional = true }
mailparse = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "dispatch"
harness = false
