[package]
name = "librefang-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Bridge Layer — pluggable messaging integrations for LibreFang"

[features]
default = [
    # Commonly used channels — lightweight, no heavy/unmaintained deps
    "channel-telegram",
    "channel-discord",
    "channel-slack",
    "channel-webhook",
    "channel-signal",
    "channel-whatsapp",
    "channel-teams",
    "channel-feishu",
    "channel-dingtalk",
    "channel-wecom",
    "channel-twitch",
    "channel-rocketchat",
    "channel-zulip",
    "channel-revolt",
    "channel-pumble",
    "channel-threema",
    "channel-twist",
    "channel-webex",
    "channel-ntfy",
    "channel-nextcloud",
    "channel-nostr",
    "channel-qq",
    "channel-wechat",
    "channel-voice",
    "channel-reddit",
    "channel-xmpp",
    # Heavy/unmaintained deps — opt-in only:
    # "channel-email"        — imap 2.x + nom 5 + base64 0.13 (unmaintained; see #3861)
    # "channel-google-chat"  — rsa crate, RUSTSEC-2023-0071 Marvin timing attack (see #3666)
    # "channel-matrix"       — heavy dep tree
    # "channel-mattermost"   — rarely used
    # "channel-irc"          — rarely used
    # "channel-bluesky"      — rarely used
    # "channel-line"         — rarely used
    # "channel-mastodon"     — rarely used
    # "channel-messenger"    — rarely used
    # "channel-flock"        — rarely used
    # "channel-guilded"      — rarely used
    # "channel-keybase"      — rarely used
    # "channel-discourse"    — rarely used
    # "channel-gitter"       — rarely used
    # "channel-gotify"       — rarely used
    # "channel-linkedin"     — rarely used
    # "channel-mumble"       — rarely used
    # "channel-viber"        — rarely used
    # "channel-mqtt"         — rarely used
]

all-channels = [
    "channel-telegram",
    "channel-discord",
    "channel-slack",
    "channel-matrix",
    "channel-email",
    "channel-webhook",
    "channel-whatsapp",
    "channel-signal",
    "channel-teams",
    "channel-mattermost",
    "channel-irc",
    "channel-google-chat",
    "channel-twitch",
    "channel-rocketchat",
    "channel-zulip",
    "channel-xmpp",
    "channel-bluesky",
    "channel-feishu",
    "channel-line",
    "channel-mastodon",
    "channel-messenger",
    "channel-reddit",
    "channel-revolt",
    "channel-viber",
    "channel-voice",
    "channel-flock",
    "channel-guilded",
    "channel-keybase",
    "channel-nextcloud",
    "channel-nostr",
    "channel-pumble",
    "channel-threema",
    "channel-twist",
    "channel-webex",
    "channel-dingtalk",
    "channel-discourse",
    "channel-gitter",
    "channel-gotify",
    "channel-linkedin",
    "channel-mumble",
    "channel-ntfy",
    "channel-qq",
    "channel-wechat",
    "channel-wecom",
    "channel-mqtt",
]

# Individual channel features
channel-telegram = []
channel-discord = []
channel-slack = []
channel-matrix = []
channel-email = ["dep:lettre", "dep:imap", "dep:rustls-connector", "dep:mailparse"]
channel-webhook = []
channel-whatsapp = []
channel-signal = []
channel-teams = []
channel-mattermost = []
channel-irc = []
channel-google-chat = ["dep:rsa"]
channel-twitch = []
channel-rocketchat = []
channel-zulip = []
channel-xmpp = []
channel-bluesky = []
channel-feishu = ["dep:aes", "dep:cbc"]
channel-line = []
channel-mastodon = []
channel-messenger = []
channel-reddit = []
channel-revolt = []
channel-viber = []
channel-voice = []
channel-flock = []
channel-guilded = []
channel-keybase = []
channel-nextcloud = []
channel-nostr = ["dep:k256"]
channel-pumble = []
channel-threema = []
channel-twist = []
channel-webex = []
channel-dingtalk = []
channel-discourse = []
channel-gitter = []
channel-gotify = []
channel-linkedin = []
channel-mumble = []
channel-ntfy = []
channel-qq = []
channel-wechat = []
channel-wecom = ["dep:aes", "dep:cbc"]
channel-mqtt = ["dep:rumqttc"]

[dependencies]
librefang-types = { path = "../librefang-types" }
bitflags = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
html-escape = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
regex = { workspace = true }
regex-lite = { workspace = true }
smallvec = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }

# Channel-specific optional dependencies
rsa = { workspace = true, optional = true }
aes = { version = "0.9", optional = true }
cbc = { version = "0.2", optional = true }
rustls = { workspace = true, features = ["ring"] }
k256 = { workspace = true, optional = true }

rumqttc = { workspace = true, optional = true }
lettre = { workspace = true, optional = true }
imap = { workspace = true, optional = true }
rustls-connector = { workspace = true, optional = true }
mailparse = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "dispatch"
harness = false
