[package]
name = "librefang-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Bridge Layer — pluggable messaging integrations for LibreFang"
readme = "README.md"

[features]
# No cargo features. Every channel adapter ships as a sidecar
# (`librefang.sidecar.adapters.*` in `sdk/python/`); the crate
# itself just provides the trampoline (`sidecar.rs`), the bridge
# types, and shared helpers. The historical `channel-*` and
# `all-channels` feature flags are gone — their last consumer was
# `librefang-api` which no longer references them.
default = []

[dependencies]
librefang-types = { path = "../librefang-types" }
bitflags = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
pdf-extract = "0.10"
regex = { workspace = true }
regex-lite = { workspace = true }
smallvec = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }
# TLS config for the shared HTTP client (`http_client.rs`). The code
# builds its provider via `rustls::crypto::aws_lc_rs` (rustls' default
# backend), so no extra provider feature is requested here — the old
# `features = ["ring"]` pulled an unused second crypto backend.
rustls = { workspace = true }

# Embeds `sdk/python/librefang/` into the daemon binary so a new
# user with just `python3` on PATH can enable a sidecar channel
# without first running `pip install librefang-sdk`. See
# `embedded_sdk.rs` for the runtime extraction + PYTHONPATH-injection
# behaviour. Same crate the dashboard SPA bundle uses
# (`librefang-api` dep, version pinned at the workspace level).
include_dir = "0.7"
# Content hash of the embedded SDK tree — drives the
# `<home>/sidecar-python/<hash>/` directory name so a daemon upgrade
# extracts to a fresh subdirectory. The wider `librefang-channels`
# cleanup in #5473 pruned `sha2` from this crate alongside the
# webhook-verifying in-process adapters; `embedded_sdk.rs` is the
# only re-consumer.
sha2 = { workspace = true }

# Sidecar migration cleanup: with every channel adapter moved
# out-of-process (`librefang.sidecar.adapters.*`), the crypto and
# transport deps the in-process adapters needed have no remaining
# consumer in this crate and were removed:
#   - `hmac` / `sha2` / `sha1` — inbound webhook signature
#     verification now runs inside each Python sidecar (see AGENTS.md
#     "Webhook security").
#   - `aes` / `cbc` — AES-CBC envelope decryption of WeCom (#5392) /
#     Feishu (#5380) webhook payloads; now done in those sidecars.
#     (Were `optional` with no feature to enable them, so already
#     unreachable from this crate.)
#   - `tokio-tungstenite` — Socket-Mode / gateway websockets (e.g.
#     WeCom) are the sidecar's concern now.
#   - `hex` / `html-escape` / `urlencoding` / `zeroize` — no remaining
#     in-crate caller after the adapters left.
# `lettre` / `imap` / `rustls-connector` / `rustls-pemfile` /
# `mailparse` (the email adapter) and `rsa` (google_chat
# service-account JWT) were dropped earlier alongside their adapters;
# the sidecars use Python stdlib instead.

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.6"
serde_json = { workspace = true }

[[bench]]
name = "dispatch"
harness = false

[lints]
workspace = true
