[package]
name = "librefang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the LibreFang Agent OS"

[features]
default = ["librefang-api/all-channels", "telemetry"]
all-channels = ["librefang-api/all-channels"]
mini = ["librefang-api/mini"]
# Android target: exclude channel-email (rustls-connector 0.23.0 + rustls-platform-verifier 0.7.0
# incompatibility — Verifier::new_with_extra_roots not implemented on Android).
android = ["librefang-api/all-channels-no-email"]
telemetry = ["librefang-api/telemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[[bin]]
name = "librefang"
path = "src/main.rs"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-kernel = { path = "../librefang-kernel" }
librefang-api = { path = "../librefang-api", default-features = false }
librefang-channels = { path = "../librefang-channels", default-features = false }
librefang-migrate = { path = "../librefang-migrate" }
librefang-skills = { path = "../librefang-skills" }
librefang-extensions = { path = "../librefang-extensions" }
librefang-memory = { path = "../librefang-memory" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-core = "0.1"
tracing-subscriber = { workspace = true }
arc-swap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
chrono = { workspace = true }
walkdir = { workspace = true }
base64 = { workspace = true }
librefang-runtime = { path = "../librefang-runtime" }
rusqlite = { workspace = true }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
libc = "0.2"
fluent = "0.17"
unic-langid = "0.9"
open = "5.3.4"
toml_edit = "0.25.8"
rustls = "0.23"
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }

[dev-dependencies]
tempfile = { workspace = true }
